<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
		android:background="@color/background"
		>
	<LinearLayout android:layout_width="wrap_content"
	              android:layout_height="wrap_content"
	              android:orientation="vertical"
	              android:id="@+id/linearCore"
	>

		<RelativeLayout android:layout_width="wrap_content" android:layout_height="match_parent">
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:text="Coming soon watch your feed" android:layout_centerInParent="true"/>
	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:layout_marginLeft="10dp"
	              android:layout_marginRight="10dp"
	              android:orientation="vertical"
	              android:layout_marginTop="10dp"
					android:id="@+id/linearOne">

		<TextView android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:text="@string/applicant"
		          android:textSize="15sp"/>

		<EditText android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="textPersonName"
           android:hint="@string/firstname"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_marginTop="10sp"
			android:id="@+id/classFname"/>

		<EditText android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:inputType="textPersonName"
		          android:hint="@string/lastname"
		          android:layout_marginLeft="10dp"
		          android:layout_marginRight="10dp"
		          android:id="@+id/classLname"/>

		<EditText android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:inputType="number"
		          android:hint="@string/age"
		          android:layout_marginLeft="10dp"
		          android:layout_marginRight="10dp"

		          android:id="@+id/classAge"/>

		<EditText android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:inputType="textPersonName"
		          android:hint="@string/address"
		          android:layout_marginLeft="10dp"
		          android:layout_marginRight="10dp"
		          android:id="@+id/classAddress"/>
		<EditText android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:inputType="phone|number"
		          android:hint="@string/phoneNumber"
		          android:layout_marginLeft="10dp"
		          android:layout_marginRight="10dp"
		          android:id="@+id/classPhone"/>
	</LinearLayout>

	<LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginTop="10dp"
	              android:layout_marginLeft="10dp"
	              android:layout_marginRight="10dp"
	              android:id="@+id/linear2"
                  android:layout_below="@id/linearOne">

		<TextView android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:text="@string/PickInstrument"
		          android:textSize="15sp"/>

		<Spinner android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:id="@+id/spinInstrument"
		         android:entries="@array/pick_instrument"/>

		<TextView android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:text="@string/owner"
		          android:textSize="15sp"/>

		<Spinner android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_marginTop="4dp"
		         android:id="@+id/spinOwner"
		         android:entries="@array/no_instrument"/>
	</LinearLayout>


	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:layout_below="@id/linear2"
	              android:layout_marginTop="10dp"
	              android:paddingTop="5dp"
	              android:id="@+id/linear3"
					android:orientation="vertical">

		<TextView android:layout_width="wrap_content"
		          android:layout_height="wrap_content" android:layout_marginLeft="4dp"
			android:text="Guardian"/>


		<EditText android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:inputType="textPersonName"
		          android:hint="@string/name"
		          android:layout_marginLeft="10dp"
		          android:layout_marginRight="10dp"
		          android:id="@+id/classGuardianName"/>

		<EditText android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:inputType="textPersonName"
		          android:hint="@string/address"
		          android:layout_marginLeft="10dp"
		          android:layout_marginRight="10dp"
		          android:id="@+id/classGuardianAddress"/>

		<EditText android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:inputType="number"
		          android:hint="@string/phoneNumber"
		          android:layout_marginLeft="10dp"
		          android:layout_marginRight="10dp"
		          android:id="@+id/classGuardianNumber"/>

		<LinearLayout   android:layout_width="match_parent" android:layout_marginRight="10dp"
		                android:layout_height="wrap_content"    android:layout_marginLeft="10dp"
						android:orientation="vertical"          android:layout_marginTop="8dp">
			<TextView android:layout_width="wrap_content" android:textSize="15sp"
			          android:layout_height="wrap_content"  android:textStyle="italic"
						android:text="@string/health"/>
			<EditText android:layout_width="match_parent"
			          android:typeface="sans" android:id="@+id/healthGuardian"
			          android:layout_height="wrap_content"/>

		</LinearLayout>

		<LinearLayout android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:orientation="horizontal"
		             android:layout_gravity="center"
		              android:layout_marginTop="5dp">
<ImageView android:layout_width="wrap_content"  android:src="@drawable/naira"
           android:layout_height="wrap_content" android:layout_gravity="center"/>
			<TextView android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:text="@string/cost"
			          android:layout_gravity="center"
			          android:id="@+id/showPrice"
			          android:layout_marginLeft="4dp"
			          android:textSize="25sp" android:layout_marginStart="10dp"/>
		</LinearLayout>
		<Button android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/classProceed"
		        android:background="@color/colorPrimary"
		        android:layout_gravity="right"
		        android:layout_marginTop="5dp"
		        android:layout_marginRight="4dp"
		        android:layout_marginBottom="4dp"

		        android:id="@+id/classProceed"/>

	</LinearLayout>
		</RelativeLayout>
	</LinearLayout>
</ScrollView>