<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="300dp"
		android:layout_height="380dp"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_marginRight="10dp"
		android:layout_marginLeft="10dp"
		android:layout_gravity="center"
		app:cardCornerRadius="10dp"
		app:cardElevation="10dp">
<RelativeLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content"
		>

	<ImageView android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:src="@drawable/ic_cancel_black_24dp"
	           android:layout_alignParentRight="true"/>

	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:id="@+id/line1" android:layout_marginTop="80dp" android:orientation="horizontal">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/theory" android:textSize="15sp"/>
		<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/score" android:inputType="number" android:layout_marginLeft="15dp" android:id="@+id/scoreTheory"/>
	</LinearLayout>

	<LinearLayout android:layout_width="wrap_content" android:layout_marginLeft="10dp" android:layout_height="wrap_content" android:layout_below="@+id/line1" android:orientation="horizontal" android:id="@+id/line2">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Practical" android:textSize="15sp"/>
		<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/score" android:inputType="number" android:layout_marginLeft="4dp" android:id="@+id/scorePractical"/>
	</LinearLayout>

	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:orientation="horizontal" android:layout_below="@+id/line2" android:id="@+id/line3">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Exceptional" android:textSize="15sp"/>
		<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/score" android:inputType="number" android:layout_marginLeft="15dp" android:id="@+id/scoreExc"/>
	</LinearLayout>

	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:orientation="horizontal" android:layout_below="@+id/line3">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Melody" android:textSize="15sp"/>
		<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/score" android:inputType="number" android:id="@+id/scoreMelody" android:layout_marginLeft="15dp"/>
	</LinearLayout>

	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"  android:orientation="horizontal" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:layout_marginBottom="20dp">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="8" android:textStyle="bold" android:textSize="25dp" android:id="@+id/calScore"/>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="/8" android:textStyle="bold" android:textSize="25dp"/>

	</LinearLayout>
</RelativeLayout>

</android.support.v7.widget.CardView>