<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="@color/background"
		tools:context=".MainActivity">

	<android.support.v7.widget.Toolbar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?attr/colorPrimary"
			android:theme="?attr/actionBarTheme"
			android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar"/>


	<ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:layout_gravity="center" >

		<LinearLayout android:layout_width="match_parent" android:orientation="vertical" android:layout_gravity="center"
		              android:layout_height="wrap_content" android:gravity="center"><!--android:layout_marginTop="40dp"-->

					<android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_gravity="center" android:id="@+id/joinClass"
			                                    android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
			                                    app:cardCornerRadius="10dp" app:cardElevation="10dp" app:cardBackgroundColor="@color/colorPrimary" android:layout_marginTop="8dp">
				<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

					<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp"
					           android:src="@drawable/singing" android:layout_marginLeft="4dp"
					           android:layout_marginStart="4dp"/>

					<TextView android:layout_width="wrap_content" android:fontFamily="sans-serif" android:text="@string/join_class"
					          android:textStyle="bold"  android:textSize="25sp"
					          android:layout_gravity="center" android:layout_height="wrap_content"/>

					<TextView android:layout_width="wrap_content" android:textStyle="normal" android:fontFamily="serif" android:text="@string/classDesc"
					          android:layout_height="wrap_content" android:gravity="center" android:layout_marginLeft="4dp" android:layout_marginRight="4dp"
					          android:textSize="15sp" android:layout_gravity="center" />
						</LinearLayout>
					</android.support.v7.widget.CardView>




			<android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_gravity="center" android:id="@+id/bootCamp" android:layout_marginTop="8dp"
			                                    android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
			                                    app:cardCornerRadius="10dp" app:cardElevation="10dp" app:cardBackgroundColor="@color/colorPrimary">
				<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

					<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp"
					           android:src="@drawable/tent" android:layout_marginLeft="4dp"
					           android:layout_marginStart="4dp"/>

					<TextView android:layout_width="wrap_content" android:fontFamily="sans-serif" android:text="@string/BootCamp"
					          android:textStyle="bold"  android:textSize="25sp"
					          android:layout_gravity="center" android:layout_height="wrap_content"/>

					<TextView android:layout_width="wrap_content" android:textStyle="normal" android:fontFamily="serif" android:text="@string/bootCampDesc"
					          android:layout_height="wrap_content" android:gravity="center" android:layout_marginLeft="4dp" android:layout_marginRight="4dp"
					          android:textSize="15sp" android:layout_gravity="center" />
				</LinearLayout>
			</android.support.v7.widget.CardView>



			<android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_gravity="center" android:id="@+id/feed" android:layout_marginTop="8dp"
			                                    android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
			                                    app:cardCornerRadius="10dp" app:cardElevation="10dp" app:cardBackgroundColor="@color/colorPrimary" >
				<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

					<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp"
					           android:src="@drawable/message" android:layout_marginLeft="4dp"
					           android:layout_marginStart="4dp"/>

					<TextView android:layout_width="wrap_content" android:fontFamily="sans-serif" android:text="@string/Feeds"
					          android:textStyle="bold"  android:textSize="25sp"
					          android:layout_gravity="center" android:layout_height="wrap_content"/>

					<TextView android:layout_width="wrap_content" android:textStyle="normal" android:fontFamily="serif" android:text="@string/feedDesc"
					          android:layout_height="wrap_content" android:gravity="center" android:layout_marginLeft="4dp" android:layout_marginRight="4dp"
					          android:textSize="15sp" android:layout_gravity="center" android:layout_marginBottom="4dp" />
				</LinearLayout>
			</android.support.v7.widget.CardView>


			<android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_gravity="center" android:id="@+id/Curriculum"
			                                    android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="4dp"
			                                    app:cardCornerRadius="10dp" app:cardElevation="10dp" app:cardBackgroundColor="@color/colorPrimary" android:layout_marginTop="8dp">
				<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

					<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp"
					           android:src="@drawable/curriculum" android:layout_marginLeft="4dp"/>

					<TextView android:layout_width="wrap_content" android:fontFamily="sans-serif" android:text="@string/Curriculum"
					          android:textStyle="bold"  android:textSize="25sp"
					          android:layout_gravity="center" android:layout_height="wrap_content"/>

					<TextView android:layout_width="wrap_content" android:textStyle="normal" android:fontFamily="serif" android:text="@string/CurriculumDesc"
					          android:layout_height="wrap_content" android:gravity="center" android:layout_marginLeft="4dp" android:layout_marginRight="4dp"
					          android:textSize="15sp" android:layout_gravity="center" android:layout_marginBottom="4dp" />
				</LinearLayout>
			</android.support.v7.widget.CardView>




		</LinearLayout>






	</ScrollView>

</LinearLayout>