<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:text="You currently do not have a profile" android:layout_centerInParent="true" android:textSize="18sp" android:textStyle="italic" android:fontFamily="serif" android:id="@+id/profile_placeholder"/>
	<RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/profile_container">
		<android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_marginTop="8dp" android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
		                                    android:layout_height="wrap_content" app:cardElevation="8dp">
			<GridLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:rowCount="5" android:columnCount="2" >
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Name" android:layout_marginLeft="8dp"/>
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Name" android:layout_marginLeft="8dp" android:id="@+id/profile_name"/>

				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/age" android:layout_marginLeft="8dp"/>
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/age" android:layout_marginLeft="8dp" android:id="@+id/profile_age"/>

				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/address" android:layout_marginLeft="8dp"/>
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/address" android:layout_marginLeft="8dp" android:id="@+id/profile_address"/>


			</GridLayout>
		</android.support.v7.widget.CardView>


	</RelativeLayout>





</RelativeLayout>